Closed Bug 533258 Opened 15 years ago Closed 15 years ago

"Assertion failure: hasMethodBarrier()" with ckeditor

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: bc, Assigned: brendan)

References

()

Details

(Keywords: assertion, Whiteboard: fixed-in-tracemonkey)

Attachments

(2 files, 3 obsolete files)

1. http://demos.theactivegroup.com/?demo=media&script=audioev
2. Assertion failure: hasMethodBarrier(), at /work/mozilla/builds/1.9.3/mozilla/js/src/jsscopeinlines.h:80
theactivegroup assert was implicated in a NPSWF32.dll@0x139215 crash on windows while http://demos.theactivegroup.com/?demo=media&script=audioev was implicated in a npdsplay.dll@0x1e8b3 crash on windows.
Keywords: testcase
Hardware: x86 → All
Attached file Slightly reduced testcase (obsolete) —
Random thought... :

For some reason I'm unable to change the line involving http://www.drugme.ru/media/js/ckeditor/ckeditor.js
Still happens on TM branch (loaded testcase in comment 3 using TM rev aeb1809789d9).
Keywords: testcase
Summary: Assertion failure: hasMethodBarrier() → "Assertion failure: hasMethodBarrier()" with ckeditor
Attached file self-contained, non-reduced testcase (obsolete) —
The script http://www.drugme.ru/media/js/ckeditor/ckeditor.js checks its location (by looking at the "src" attribute of the relevant "script" element) and loads additional files from the same directory.  No wonder it was tricky to make the testcase self-contained!
Attachment #418535 - Attachment is obsolete: true
I'll take a look at this tomorrow morning.
Assignee: general → jwalden+bmo
Severity: normal → critical
Attached patch fixSplinter Review
Sorry, my fault -- figured it out from the jsbeautifier.org'ed source.

/be
Assignee: jwalden+bmo → brendan
Status: NEW → ASSIGNED
Attachment #420495 - Flags: review?(jorendorff)
Priority: -- → P1
Target Milestone: --- → mozilla1.9.3a1
Blocks: 471214
Attachment #420495 - Flags: review?(jorendorff) → review+
http://hg.mozilla.org/tracemonkey/rev/7edbd161983a

/be
Whiteboard: fixed-in-tracemonkey
Attachment #420465 - Attachment is obsolete: true
Flags: in-testsuite?
Attached file 300-line testcase
Reduced to 300 lines. This is about as good as I can get for the moment.
Attachment #420584 - Attachment is obsolete: true
http://hg.mozilla.org/mozilla-central/rev/7edbd161983a
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: