Bug 533258 - "Assertion failure: hasMethodBarrier()" with ckeditor (r=jorendorff).